@@ -1,20 +1,30 @@
 \name{showStatus}
 \alias{showStatus}
+\alias{lookup_statuses}
 \title{
-A function to return one specific tweet
+Functions to return statuses
 }
 \description{
-This function will take a numeric ID of a tweet and return it to the user
+These functions can be used to retrieve specific tweets from the server
 }
 \usage{
 showStatus(id, ...)
+lookup_statuses(ids, ...)
 }
 \arguments{
-  \item{id}{Numerical ID of a specific tweet}
-  \item{\dots}{Optional arguments to be passed to \code{\link{GET}}}
+  \item{id}{ID of a specific tweet, should be a String, but numbers are accepted}
+  \item{ids}{A vector of IDs to lookup, should be Strings but numbers are accepted}
+  \item{\dots}{Optional arguments to be passed to \code{\link{GET}} (or \code{\link{POST}}, see Details)}
 }
 \value{
-  An object of class \code{\link{status}}
+  For showStatus, an object of class \code{\link{status}}
+  
+  For lookup_statuses, a list of \code{\link{status}} objects. Note that these will not be in the
+  same order as the \code{ids} argument and that any id which could not be retrieved will not be present.
+}
+\details{
+  Ideally a POST request would be used for lookup_statuses, however currently there is a problem
+  (issue 78 on github) and GET is used.
 }
 \author{
 Jeff Gentry
@@ -25,7 +35,8 @@ Jeff Gentry
 \examples{
  \dontrun{
     showStatus('123')
- }
+    lookup_statuses(c("123", "234", "456"))
+}
 }
 % Add one or more standard keywords, see file 'KEYWORDS' in the
 % R documentation directory.
