@@ -12,7 +12,8 @@
 \usage{
 tweet(text, ...)
 updateStatus(text, lat=NULL, long=NULL, placeID=NULL,
-             displayCoords=NULL, inReplyTo=NULL, mediaPath=NULL, ...)
+             displayCoords=NULL, inReplyTo=NULL, mediaPath=NULL, 
+             bypassCharLimit=FALSE, ...)
 deleteStatus(status, ...)
 }
 \arguments{
@@ -28,6 +29,7 @@ deleteStatus(status, ...)
   \item{inReplyTo}{If not \code{NULL}, denotes the status this is in reply to.  Either an object of
         class \code{\link{status}} or an ID value}
   \item{mediaPath}{If not \code{NULL}, file path to a supported media format (PNG, JPG and GIF) to be included in the status update}
+  \item{bypassCharLimit}{If \code{TRUE} will not enforce the incoming tweet is less than 140 characters. This can be useful when dealing with autoshortened links}
   \item{...}{Optional arguments to be passed to \code{\link{GET}}}
 }
 \details{
